--- a/src/index.css
+++ b/src/index.css
@@ -1,64 +1,82 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200;12..96,300;12..96,400;12..96,500;12..96,600;12..96,700;12..96,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200;12..96,300;12..96,400;12..96,500;12..96,600;12..96,700;12..96,800&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
 body {
-    overflow-x: hidden;
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-    @apply font-poppins;
+	overflow-x: hidden;
+	-ms-overflow-style: none; /* IE and Edge */
+	scrollbar-width: none; /* Firefox */
+	@apply font-poppins;
 }
 
 body::-webkit-scrollbar {
-    display: none;
+	display: none;
 }
 
 .home-cards {
-    @apply p-5 cursor-pointer rounded-lg border border-slate-300 text-blackShade transform transition-all duration-300 ease-linear;
+	@apply p-5 cursor-pointer rounded-lg border border-slate-300 text-blackShade transform transition-all duration-300 ease-linear;
 }
 
 .home-cards:hover {
-    @apply shadow-xl -translate-y-3;
+	@apply shadow-xl -translate-y-3;
 }
 
 .home-cards .icons {
-    @apply h-5;
+	@apply h-5;
 }
 
 .home-cards h4 {
-    @apply font-bold font-bricolage;
+	@apply font-bold font-bricolage;
 }
 
 .home-cards p {
-    @apply text-justify mt-2;
+	@apply text-justify mt-2;
 }
 
- /* the slides */
+/* the slides */
 .slick-slide {
-    margin: 0 10px;
+	margin: 0 10px;
 }
 
 /* the parent */
 .slick-list {
-    margin: 0 -10px;
+	margin: 0 -10px;
 }
 
 .wrapper {
-    @apply border-primary border-2 rounded-xl;
-  }
-  
-  .container {
-    @apply bg-white rounded-xl;
-  }
-  
-  .barCompleted {
-    @apply bg-primary w-[60%];
-  }
-  
-  .label {
-    @apply text-white;
-  }
+	@apply border-primary border-2 rounded-xl;
+}
+
+.container {
+	@apply bg-white rounded-xl;
+}
+
+.barCompleted {
+	@apply bg-primary;
+}
+
+.label {
+	@apply text-white;
+}
+
+.contact-info {
+	background: -moz-linear-gradient(
+		top,
+		rgba(255, 255, 255, 1) 50%,
+		rgba(255, 255, 255, 0) 100%
+	); /* FF3.6-15 */
+	background: -webkit-linear-gradient(
+		top,
+		rgba(255, 255, 255, 1) 50%,
+		rgba(255, 255, 255, 0) 100%
+	); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(
+		to bottom,
+		rgba(255, 255, 255, 1) 50%,
+		rgba(255, 255, 255, 0) 100%
+	); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
+}
